--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -36,8 +36,11 @@ html {
 
 /* Header */
 .header {
-  position: absolute;
+  position: relative;
   width: 100%;
+  height: 80px;
+  z-index: 2;
+  background-color: #a7e1ff;
 }
 .header__heading--hidden {
   visibility: hidden;
@@ -112,22 +115,27 @@ html {
 }
 
 /* Map */
-.map-container {
-  padding-top: 80px;
-  padding-bottom: 1.3%;
+.main {
+  height: 1150px;
+  overflow: hidden;
+}
+#wrapper {
+  height: calc(100vh - 400px);
+  position: relative;
   overflow: hidden;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .map {
-  position: relative;
-  margin: 0 calc((100% - 1925px) / 2 - 62px);
-}
-.map-svg {
-  margin: 0 auto;
+  z-index: 0;
+  position: absolute;
   display: flex;
   justify-content: center;
-  height: 945px;
+  align-items: center;
+}
+.map-svg {
+  position: static;
   width: 100%;
 }
 .map__icon-container {
@@ -142,20 +150,20 @@ html {
   border-radius: 50%;
 }
 .map__pet--eagle {
-  left: 75px;
-  top: 500px;
+  left: 6.5%;
+  top: 52%;
 }
 .map__pet--alligator {
-  left: 300px;
-  top: 505px;
+  left: 25.7%;
+  top: 53%;
 }
 .map__pet--gorilla {
-  left: 655px;
-  top: 610px;
+  left: 56%;
+  top: 68%;
 }
 .map__pet--panda {
-  left: 920px;
-  top: 510px;
+  left: 80%;
+  top: 54%;
 }
 .map__pet-name {
   font-size: 15px;
@@ -308,10 +316,10 @@ html {
   float: right;
   width: 32px;
   height: 80px;
-  z-index: 1;
-  bottom: 200px;
+  z-index: 100;
+  bottom: 410px;
   margin-bottom: 100px;
-  margin-right: 20px;
+  margin-right: 30px;
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
 }
 .zoom-in {
