--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -116,13 +116,15 @@ html {
 
 /* Map */
 .main {
-  height: 1150px;
-  overflow: hidden;
+  position: relative;
+  min-height: calc(100vh - 80px - 270px);
+  height: 945px;
+  top: 0;
+  bottom: 0;
+  left: 0;
 }
 #wrapper {
-  height: calc(100vh - 400px);
   position: relative;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,6 +135,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 1000px;
 }
 .map-svg {
   position: static;
@@ -317,6 +320,7 @@ html {
   width: 32px;
   height: 80px;
   z-index: 100;
+  top: 1000px;
   bottom: 410px;
   margin-bottom: 100px;
   margin-right: 30px;
